Address review: defensive Map.copyOf and richer health-check tests
Signed-off-by: singhyash05 <yashsingh5609@gmail.com>